<?xml version="1.0"?>
<package>
  <name>arenaros</name>
  <version>0.1.0</version>
  <description>The arenaros package</description>
  <maintainer email="missrisalaheddine@gmail.com">saladin</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export></export>
</package>
