<?xml version="1.0"?>
<package>
  <name>robocape_bringup</name>
  <version>0.0.0</version>
  <description>The robocape_bringup package</description>

  <maintainer email="missrisalaheddine@gmail.com">Salah-Eddine Missri</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/robocape_bringup</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  
</package>
